# msc-computer-science

./: .gitignore  01_01_Book6thEdition.md  02_01_Multicast.md  CNTS.md  README.md  SUMMARY.md  pattern-recognition-and-machine-learning.md  system-and-device-programming.md
cas/: cas.md
computer-architectures/: 8086.md  lab00.md  lab01.md
computer-network-technologies/: 01_01_Book6thEdition.md  02_01_Multicast.md
prml/: .gitignore  README.md  prml_book.md  pyproject.toml
prml/labs/: lab02.md  lab02.py  lab03.md  lab03.py  lab04.md  lab04.py  lab05.py  lab06.py  lab07.py  lab08.py  lab09.py  lab10.py  prml.py  requirements.txt
prml/labs/lab04/: test_lab.py
prml/labs/lab05/: solution.py
prml/labs/project/: Wine Classifier.ipynb
prml/src/prml/: prml.py
prml/tests/: test_lab_04.py
sdp/: sdp.md
sdp/lab/: e05concurrent.c  e05recursive.c  lab01.md
seng/labs/lab2/: LAb2-EZgas(1).pptx  Lab2-1.docx  Lab2-2.docx  Lab2-3(1).docx  Lab2-3.docx  Lab2inclass.docx
system-device-programming/: unix.md
system-device-programming/cpp/cpp-slide-02/: CMakeLists.txt  FP_examples.cpp  HelloWorld.cpp  MyClass.cpp  MyClass.h  ResultCode.cpp  ResultCode.h  casting.cpp
system-device-programming/cpp/helloWorld/: CMakeLists.txt  ResultCode.cpp  ResultCode.h  main.cpp
system-device-programming/part1/: Dockerfile  docker-compose.yaml
system-device-programming/part1/lab01/: docker-compose.yaml
system-device-programming/part2/lab01/: exercise4.c  exercise4_prof_solution.c  exercise6.c  exercise7.c  exercise8.c  exercise8withoutThreads.c  lab01.md
(+5 files in other folders)
