[tool.poetry]
name = "prml"
version = "0.1.0"
description = ""
authors = ["Juan Vanegas <jandvanegas@gmail.com>"]
readme = "README.md"
packages = [
    { include = "prml", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
mypy = "^1.1.1"
autoflake = "^2.0.2"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
flake8-docstrings = "^1.7.0"


[tool.poetry.group.nvim.dependencies]
setuptools = "^67.6.0"
debugpy = "^1.6.6"
pynvim = "^0.4.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
